--- a/studio/src/main/webapp/WEB-INF/web.xml
+++ b/studio/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>*.html</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
