--- a/studio/src/main/webapp/WEB-INF/web.xml
+++ b/studio/src/main/webapp/WEB-INF/web.xml
@@ -22,11 +22,11 @@
 
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>*.html</url-pattern>
+        <url-pattern>*.jsp</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
 
     <session-config>
