--- a/studio/src/main/webapp/WEB-INF/web.xml
+++ b/studio/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
